public static class AnimatorParameter
{
    public const string ChefMove = "Move";
    public const string ChefMoveFast = "MoveFast";
    public const string ChefPick = "Pick";
    public const string ChefDrop = "Drop";
    public const string ChefCarry = "Carry";
    public const string ChefAcknowledge = "Acknowledge";
}
